--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/styled-engine-sc": "^7.3.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.3.6"
+    "styled-components": "^6.3.6",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
